--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,9 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --font-montserrat: var(--font-montserrat), sans-serif;
+  --font-opensans: var(--font-opensans), sans-serif;
+  --font-roboto: var(--font-roboto), monospace;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -18,6 +21,15 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  @apply bg-background text-text;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  @apply font-montserrat font-bold;
+}
+
+code {
+  @apply font-roboto;
 }
 
 @layer utilities {
